# inneklima-beregninger

./: CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.yaml  pyproject.toml  requirements.txt
.github/: CODE_OF_CONDUCT.md  Dependabot.yml
.github/workflows/: ci_pipeline.yml
docs/: navneregister.md  vedlegg_a2.md  vedlegg_a3.md
examples/: input_data.csv
src/a2/: a2_co2_massebalanse.py  a2_fukt_duggpunkt.py  a2_stoy_sabine.py  a2_termisk_komfort.py  a2_varmelast.py  a2_ventilasjon.py
src/a3/: a3_co2_balanse.py  a3_dagslys_df.py  a3_eksempelkalkyler.py  a3_fukt_balanse.py  a3_operativ_temperatur.py  a3_pmv_ppd.py  a3_stoy_summering.py  a3_trekk_draught.py  a3_ventilasjonseffektivitet.py  a3_ventilasjonsvarmetap.py
tests/: test_a2_ventilasjon.py
